--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     gap: 10px;
     grid-template-columns: 150px repeat(4,1fr);
     grid-template-rows: auto;
-    font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
 
